src/objects/integrator_da__Connection__c.object
<CustomObject>
    <fields>
        <fullName>integrator_da__Access_Token__c</fullName>
        <label>Access Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__Account_Id__c</fullName>
        <label>NetSuite Account Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__Endpoint__c</fullName>
        <label>Endpoint</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>integrator_da__GUID__c</fullName>
        <externalId>true</externalId>
        <label>GUID</label>
        <length>128</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>integrator_da__Password__c</fullName>
        <label>Password</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__Role_Id__c</fullName>
        <label>NetSuite Role Id</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>integrator_da__Token_Id__c</fullName>
        <label>Token Id</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__Token_Secret__c</fullName>
        <label>Token Secret</label>
        <length>128</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>integrator_da__User_Name__c</fullName>
        <label>User Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>Connection</label>
    <nameField>
        <displayFormat>CONN-{0}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>